--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="https://www.eves.com.vn/images/favicon.ico">
 
     <script src="js/jquery.js"></script>
+    <script src="js/carouselBanner.js"></script>
 
     <!-- Jquery -->
 </head>
@@ -326,14 +327,6 @@
                     </button> -->
 
                 </div>
-                <script>
-                    $(document).ready(function () {
-                        $('.carousel').carousel({
-                            interval: 2000
-                        })
-                    });
-
-                </script>
 
             </section>
 
