--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="https://www.eves.com.vn/images/favicon.ico">
 
     <script src="js/jquery.js"></script>
-    <script src="js/carouselBanner.js"></script>
+
 
     <!-- Jquery -->
 </head>
@@ -622,6 +622,14 @@
     <!-- popup noti -->
 
     <div class="purple_backdrop"></div>
+
+    <script>
+        $(document).ready(function () {
+            $("#carouselExampleFade").carousel({
+                interval: 2000
+            })
+        });
+    </script>
 
     <script src="https://www.eves.com.vn/js/owl.carousel.min.js"></script>
     <script src="https://www.eves.com.vn/js/bootstrap.min.js"></script>
