--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="https://www.eves.com.vn/images/favicon.ico">
 
-    <script src="js/jquery.js"></script>
+    <!-- <script src="js/jquery.js"></script> -->
 
 
     <!-- Jquery -->
