--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
     <link rel="stylesheet" href="https://www.eves.com.vn/css/responsive.css">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="https://www.eves.com.vn/images/favicon.ico">
-
-    <!-- <script src="js/jquery.js"></script> -->
-
-
     <!-- Jquery -->
+    <script src="js/jquery.js"></script>
 </head>
 
 <body id="page-3096" class="page">
