--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="https://www.eves.com.vn/images/favicon.ico">
     <!-- Jquery -->
-    <script src="js/jquery.js"></script>
+    <script src="https://www.eves.com.vn/js/jquery.js"></script>
 </head>
 
 <body id="page-3096" class="page">
