--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>EVS CAROUSEL BANNER</title>
 
     <!-- icofont-css-link -->
-    <link rel="stylesheet" href="https://www.eves.com.vn/css/icofont.min.css">
+    <link rel="stylesheet" href="/css/icofont.min.css">
     <!-- Owl-Carosal-Style-link -->
     <link rel="stylesheet" href="https://www.eves.com.vn/css/owl.carousel.min.css">
     <!-- Bootstrap-Style-link -->
@@ -633,11 +633,6 @@
     <script src="https://www.eves.com.vn/js/aos.js"></script>
     <script src="https://www.eves.com.vn/js/main.js"></script>
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/4fda10a122.js"></script>
-    <style>
-        .grecaptcha-badge {
-            display: none;
-        }
-    </style>
 
 
 </body>
