--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>EVS CAROUSEL BANNER</title>
 
     <!-- icofont-css-link -->
-    <link rel="stylesheet" href="/css/icofont.min.css">
+    <link rel="stylesheet" href="https://github.com/hungvu9393/eves-carousel-banner/blob/main/css/icofont.min.css">
     <!-- Owl-Carosal-Style-link -->
     <link rel="stylesheet" href="https://www.eves.com.vn/css/owl.carousel.min.css">
     <!-- Bootstrap-Style-link -->
