--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <title>EVS CAROUSEL BANNER</title>
 
     <!-- icofont-css-link -->
-    <link rel="stylesheet" href="https://github.com/hungvu9393/eves-carousel-banner/blob/6852fe0d0e9dc17933a0adfdbcbba6143deaa923/css/icofont.min.css">
+    <link rel="stylesheet"
+        href="https://rawcdn.githack.com/hungvu9393/eves-carousel-banner/0b4177371978e6b2073964ddc9c1c0bad2f39b5c/css/icofont.min.css">
     <!-- Owl-Carosal-Style-link -->
     <link rel="stylesheet" href="https://www.eves.com.vn/css/owl.carousel.min.css">
     <!-- Bootstrap-Style-link -->
